--- a/_includes/about/timeline.html
+++ b/_includes/about/timeline.html
@@ -5,7 +5,10 @@
         <div class="content">
           <h2>{{ item.title }}</h2>
           <h6 class="date">{{ item.from }} — {{ item.to }}</h6>
-          <ul>{<li>{ item.description }</li><li>{ item.description }</li><li>{ item.description }</li>}</ul>
+          <li>{{ item.description }}</li>
+          <li>{{ item.description }}</li>
+          <li>{{ item.description }}</li>
+          <li>{{ item.description }}</li>
         </div>
       </div>
     {% endfor %}
