--- a/_includes/about/timeline.html
+++ b/_includes/about/timeline.html
@@ -5,10 +5,10 @@
         <div class="content">
           <h2>{{ item.title }}</h2>
           <h6 class="date">{{ item.from }} — {{ item.to }}</h6>
-          <li>{{ item.description }}</li>
-          <li>{{ item.description }}</li>
-          <li>{{ item.description }}</li>
-          <li>{{ item.description }}</li>
+          <li>{{ item.description1 }}</li>
+          <li>{{ item.description2 }}</li>
+          <li>{{ item.description3 }}</li>
+          <li>{{ item.description4 }}</li>
         </div>
       </div>
     {% endfor %}
