--- a/_includes/about/skills.html
+++ b/_includes/about/skills.html
@@ -6,7 +6,8 @@
 
   <div class="row justify-content-between align-items-center">
     <div class="col-8">
-      <p class="mb-1">{{ skill.name }}</p>
+      <p class="mb-1">{{ skill.name1 }}</p>
+	    <p>{{ skill.name2 }}</p>
     </div>
 <!--   <div class="col-2 text-right"> <!-- could work as a last resort --> 
       &nbsp; &nbsp; &nbsp; < <div class="text-muted">{{skill.level}}</div><div class="col-1 text-right"></div><!-- could work as a last resort -->
