--- a/_includes/about/timeline.html
+++ b/_includes/about/timeline.html
@@ -5,12 +5,10 @@
         <div class="content">
           <h2>{{ item.title }}</h2>
           <h6 class="date">{{ item.from }} — {{ item.to }}</h6>
-          <ul>
-            <li>{{ item.description1 }}</li>
-            <li>{{ item.description2 }}</li>
-            <li>{{ item.description3 }}</li>
-            <li>{{ item.description4 }}</li>
-          </ul>
+            <p>{{ item.description1 }}</p>
+            <p>{{ item.description2 }}</p>
+            <p>{{ item.description3 }}</p>
+            <p>{{ item.description4 }}</p>
         </div>
       </div>
     {% endfor %}
